<resources>
    <string name="app_name">PDF Viewer</string>
    <string name="scanning_file">Scanning files...</string>
    <string name="cannot_delete">Can not delete file in your SD Card</string>
    <string name="cannot_share">Can not share file from your SD Card</string>
    <string name="file_delete">File deleted</string>
    <string name="do_you_want_delete">Do you really want to delete this file?</string>
    <string name="please_enter_number">Please enter number page</string>
    <string name="enter_number">Enter page number</string>
    <string name="jump_to">Jump to</string>
    <string name="search">Search</string>

    <string name="switch_view">Switch view</string>
    <string name="show_more_info">Show more info</string>
    <string name="share_file">Share file</string>
    <string name="delete_file">Delete file</string>
    <string name="show_all_file">Show all file</string>
    <string name="jump_to_page">Jump to page</string>
    <string name="share_with">Share with</string>
    <string name="no_pdf_found_in_this_device">No PDF found in this device</string>
    <string name="no_page_like">No page like in this document</string>
    <string name="file_information">File Information</string>
    <string name="file_name">File name:</string>
    <string name="file_path">File path:</string>
    <string name="file_size">File size:</string>
    <string name="jump_to_special_page">Jump to special page</string>
    <string name="rate_application">Rate application</string>
    <string name="rate_app">Rate app</string>
    <string name="rate_desc">Do you feel useful application? Let take 5 stars rating for the developer!</string>
    <string name="later">Later</string>
    <string name="rate_now">Rate now</string>
    <string name="loading">Loading</string>
    <string name="permission_required">Permission required</string>
    <string name="application_can_t_scan_all_pdf_files_in_your_storage_please_accept_permissions_for_application_again">Application can\'t scan all pdf files in your storage. Please accept permissions for application again.</string>
    <string name="rescan">Rescan</string>
    <string name="search_file_name">Search file name</string>
    <string name="cancel">Cancel</string>
</resources>
